--- a/css/tablet.css
+++ b/css/tablet.css
@@ -1,6 +1,6 @@
 @media only screen and (max-width: 568px) {
   header {
-    background-image: url(/public/assets/images/Hero.svg);
+    background-image: url(/images/Hero.svg);
     background-size: cover;
     max-height: 50rem;
     padding-bottom: 6.938rem;
